<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ques_category"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:background="#60474e58"
                android:fontFamily="monospace"
                android:freezesText="true"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:targetApi="jelly_bean" />

            <TextView
                android:id="@+id/overallScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ques_category"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:freezesText="true"
                android:text="@string/score"
                android:textColor="#000000"
                android:textSize="16sp"
                tools:targetApi="jelly_bean" />

            <TextView
                android:id="@+id/overallCorrectAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ques_category"
                android:layout_alignBaseline="@+id/overallScore"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:freezesText="true"
                android:text=""
                android:textColor="#000000"
                android:textSize="16sp"
                tools:targetApi="jelly_bean" />

            <TextView
                android:id="@+id/txtTotalQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/timer"
                android:layout_alignBaseline="@+id/ques_category"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="monospace"
                android:freezesText="true"
                android:text="@string/_0_10"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                tools:targetApi="jelly_bean" />

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/overallScore"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-condensed"
                android:freezesText="true"
                android:gravity="top|start"
                android:text="@string/question"
                android:textColor="#000000"
                android:textSize="20sp"
                tools:targetApi="jelly_bean" />

            <LinearLayout
                android:id="@+id/linear_show_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <TextView
                    android:id="@+id/txt_show_Answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:freezesText="true"
                    android:gravity="top|start"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    tools:targetApi="jelly_bean" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear_show_answer"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp">

                <RadioButton
                    android:id="@+id/radio_button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:freezesText="true"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/option_one"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radio_button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:freezesText="true"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/option_two"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radio_button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:freezesText="true"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/option_three"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radio_button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:freezesText="true"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/option_four"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RadioGroup>

            <GridLayout
                android:id="@+id/mainGrid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radio_group"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="80dp"
                android:columnCount="2"
                android:padding="10dp"
                android:rowCount="2">

                <android.support.v7.widget.CardView
                    android:id="@+id/cardConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="8dp">

                    <Button
                        android:id="@+id/btn_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:background="@color/colorPrimary"
                        android:fontFamily="monospace"
                        android:text="@string/confirm"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:targetApi="jelly_bean" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cardSkip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    app:cardElevation="8dp">

                    <Button
                        android:id="@+id/btn_skip"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:background="@color/colorPink"
                        android:fontFamily="monospace"
                        android:freezesText="true"
                        android:text="@string/skip"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:targetApi="jelly_bean" />
                </android.support.v7.widget.CardView>
            </GridLayout>
        </RelativeLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/quiz_banner_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_careerdost">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
