<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/splash_three_trans_modi">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cat_quiz_title"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text=""
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/resultsImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cat_quiz_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/congrats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/resultsImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="monospace"
            android:text=""
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:targetApi="jelly_bean"/>

        <TextView
            android:id="@+id/youScored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/congrats"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="monospace"
            android:text=""
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <android.support.v7.widget.CardView
            android:id="@+id/cardRetake"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            app:cardElevation="16dp">

            <Button
                android:id="@+id/btnRetake"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@color/colorGreenOne"
                android:fontFamily="monospace"
                android:text="@string/retake"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:targetApi="jelly_bean" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardShareResult"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_alignBaseline="@+id/cardRetake"
            android:layout_toRightOf="@+id/cardRetake"
            android:layout_toEndOf="@+id/cardRetake"
            app:cardElevation="16dp">

            <Button
                android:id="@+id/btnShareResult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@color/colorBlue"
                android:fontFamily="monospace"
                android:text="@string/share_result"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:targetApi="jelly_bean" />
        </android.support.v7.widget.CardView>
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>
